# contextdb

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  build_and_push.sh  cors.json  docker_run.sh  manage.py  pyproject.toml
contextdb/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  embed.py  models.py
core/migrations/: 0001_initial.py  0002_remove_docfile_file_path_docfile_file_and_more.py  0003_alter_framework_name.py  0004_alter_docfile_token_count.py  0005_docfile_created_at_docfile_updated_at.py  0006_alter_version_release_date.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  utils.ts
frontend/src/api/: crud.ts  interfaces.ts
frontend/src/assets/: main.css
frontend/src/components/: EmbeddingsModal.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/views/: AboutView.vue  HomeView.vue  ToolView.vue
get_doc_scripts/: document_scraper.py  run_all.py
get_doc_scripts/tools/: angular.py  ckeditor5.py  django.py  dotnetcore.py  expressjs.py  fast-api.py  flask.py  laravel.py  playwright.py  pydantic.py  react-dom.py  react.py  ruby.py  spring-boot.py  sqlalchemy.py  svelte.py  vuejs.py
get_doc_scripts/tools/fast-api/: make_doc.py
get_doc_scripts/tools/react/: make_doc.py
get_doc_scripts/tools/react-dom/: make_doc.py
get_doc_scripts/tools/vuejs/: make_doc.py
