[tool.poetry]
name = "contextdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
cachetools = "5.3.3"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
django = "5.0.3"
django-nested-admin = "4.0.2"
django-storages = "1.14.2"
google-api-core = "2.18.0"
google-auth = "2.29.0"
google-cloud-core = "2.4.1"
google-cloud-storage = "2.16.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.7.0"
googleapis-common-protos = "1.63.0"
greenlet = "3.0.3"
idna = "3.6"
playwright = "1.42.0"
proto-plus = "1.23.0"
protobuf = "4.25.3"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pyee = "11.0.1"
python-monkey-business = "1.0.0"
regex = "2023.12.25"
requests = "2.31.0"
rsa = "4.9"
setuptools = "69.2.0"
six = "1.16.0"
sqlparse = "0.4.4"
tiktoken = "0.6.0"
typing-extensions = "4.10.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
